Implement swagger in wallet feature
